--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -12,8 +12,9 @@
   <div class="row justify-content-center">
     <div class="col-sm-4">
       <form method="post" class="input-group">
-        <input type="text" name="domain" class="form-control form-control-lg" id="domain" required
-          placeholder="example.com">
+        <input type="text" name="domain" class="form-control form-control-lg" id="domain"
+        required="" placeholder="example.com" autocomplete="url" autocorrect="off"
+        autocapitalize="off" spellcheck="off">
         <button type="submit" class="btn btn-large btn-primary">Submit</button>
       </form>
     </div>
