--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"?
+  <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" />
     {% block head %}{%endblock%}
     <script type="application/ld+json">
     {
