--- a/templates/not-a-domain.html.jinja
+++ b/templates/not-a-domain.html.jinja
@@ -2,7 +2,7 @@
 {% set title = domain ~ "is not a domain" %}
 {% block meta_description %}{{ domain }} is not a domain.{% endblock %}
 {% block og_title %}Domain does not exist{% endblock %}
-{% block og_description %}The domain {{ domain }} is not a domain.{% endblock %}
+{% block og_description %}{{ domain }} is not a domain.{% endblock %}
 
 {% block content %}
     <div class="row justify-content-center">
