Fix custom error pages

--- a/templates/internal-error.html.jinja
+++ b/templates/internal-error.html.jinja
@@ -1,5 +1,5 @@
 {% extends "page.html.jinja"%}
-{% set title = Internal error" %}
+{% set title = "Internal error" %}
 {% block meta_description %}{% endblock %}
 {% block og_title %}Domain does not exist{% endblock %}
 {% block og_description %}{% endblock %}
