--- a/templates/not-found.html.jinja
+++ b/templates/not-found.html.jinja
@@ -1,5 +1,5 @@
 {% extends "page.html.jinja"%}
-{% set title = Not found" %}
+{% set title = "Not found" %}
 {% block meta_description %}{% endblock %}
 {% block og_title %}Domain does not exist{% endblock %}
 {% block og_description %}{% endblock %}
