--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -1,14 +1,13 @@
-{% extends "base.html.jinja" %}
+{% extends "page.html.jinja" %}
+{% set page = 'home' %}
 {% set title = "Check SPF, DMARC & more for free" %}
 {%block content %}
 <div class="px-4 py-5 text-center">
-  <h1><a href="/" class="text-decoration-none text-reset"> {{ site_name }}</a></h1>
   <p class="lead">
     Check a domain for DNSSEC, SPF, DMARC, and more for free. <br>
     No sales pitch. Powered by <a href="https://domainaware.github.io/checkdmarc">checkdmarc</a>.
   </p>
 </div>
-<main class="container" role="main">
   <div class="row justify-content-center">
     <div class="col-sm-4">
       <form method="post" class="input-group">
@@ -19,5 +18,4 @@
       </form>
     </div>
   </div>
-</main>
 {% endblock %}
