Fix about title

--- a/templates/about.html.jinja
+++ b/templates/about.html.jinja
@@ -1,6 +1,6 @@
 {% extends "page.html.jinja"%}
 {% set page = "about" %}
-{% set title = About %}
+{% set title = "About" %}
 {% block meta_description %}{{site_name}} is an open source website for validating DNS security controls for email, and
 it has many features that make it stand out{% endblock %}
 {% block og_title %}About | {{site_name}} {% endblock %}
