Only show add a row in the DNS lookups table if that mechanism requires DNS lookups

--- a/templates/about.html.jinja
+++ b/templates/about.html.jinja
@@ -4,8 +4,7 @@
 {% block meta_description %}{{site_name}} is an open source website for validating DNS security controls for email, and
 it has many features that make it stand out{% endblock %}
 {% block og_title %}About | {{site_name}} {% endblock %}
-{% block og_description %}Why build another SPF/DMARC/email security validation website? I'm glad you asked.{% endblock
-%}
+{% block og_description %}Why build another SPF/DMARC/email security validation website? I'm glad you asked.{% endblock%}
 {% block content %}
 <div class="row justify-content-center">
   <h2 class="text-center">About</h2>
