--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -114,7 +114,7 @@ with clear, RFC-based guidance — free from {{ site_name }}.{% endblock %}
         {% endif %}
         <div class="table-responsive">
           <table class="table table-bordered table-striped table-sm">
-            <caption class="visually-hidden">SPF mechanisms that require DNS lookups/caption>
+            <caption class="visually-hidden">SPF mechanisms that require DNS lookups</caption>
             <tr>
               <th>Mechanism</th>
               <th>Lookups</th>
