--- a/templates/guides/bimi.html.jinja
+++ b/templates/guides/bimi.html.jinja
@@ -30,7 +30,7 @@
     <h3>Drawbacks</h3>
     <ul>
     <li>Certificates must be purchased</li>
-    <li>Current lack of support by Microsoft leaves out a large market, especially in B2B</li>
+    <li>Current lack of support by Microsoft leaves out a large market, especially B2B</li>
     </ul>
 
     <h3>DNS records</h3>
