--- a/templates/page.html.jinja
+++ b/templates/page.html.jinja
@@ -26,7 +26,7 @@
                      <ul class="dropdown-menu">
                         <li><a class="dropdown-item{% if page == 'spf-dkim-and-dmarc-guide' %} active{% endif %}" href="/guides/spf-dkim-and-dmarc">SPF, DKIM & DMARC</a></li>
                         <li><a class="dropdown-item{% if page == 'bimi-guide' %} active{% endif %}" href="/guides/bimi">BIMI</a></li>
-                        <li><a class="dropdown-item{% if page == 'mta-sts-and-tls-rpt-guide' %} active{% endif %}" href="/guides/mta-sts-and-tls-rpt">MTA-STS & T:S-RPT</a></li>
+                        <li><a class="dropdown-item{% if page == 'mta-sts-and-tls-rpt-guide' %} active{% endif %}" href="/guides/mta-sts-and-tls-rpt">MTA-STS & TLS-RPT</a></li>
                         <li></li>
                      </ul>
             </div>
